# rust-phonenumber

./: Cargo.toml
benches/: load_hashmap_db.rs  load_static_db.rs
src/: v4.rs
src/metadata/: database.rs  descriptor.rs  format.rs  metadata.rs
