[package]
name = "phonenumber"
version = "0.3.3+8.13.9"
edition = "2021"
rust-version = "1.58.0"

authors = ["Gabriel Féron <g@leirbag.net>", "Ruben De Smet <ruben.de.smet@rubdos.be>", "meh. <meh@1aim.com>"]
license = "Apache-2.0"

description = "Library for parsing, formatting and validating international phone numbers."
repository = "https://github.com/whisperfish/rust-phonenumber"
keywords = ["phonenumber", "phone", "number", "parser", "formatter"]
readme = "README.md"

[profile.release]
debug = true

[[bin]]
name = "gen_static_db"
test = false
bench = false

[[bin]]
name = "test_old_new_db"
test = false
bench = false

[[bin]]
name = "load_hashmap_db"
test = false
bench = false

[[bin]]
name = "load_static_db"
test = false
bench = false

[dependencies]
bincode = "1.3"
either = "1.8"
fnv = "1.0"
itertools = ">=0.10, <=0.11"
lazy-regex = "3.1.0"
lazy_static = "1.4"
nom = "7.1"
once_cell = "1.18.0"
quick-xml = "0.28"
regex = "1.7"
regex-cache = "0.2"
serde = "1.0"
serde_derive = "1.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"

[build-dependencies]
bincode = "1.3"
quick-xml = "0.28"
regex = "1.7"
serde = "1.0"
serde_derive = "1.0"
thiserror = "1.0"

[dev-dependencies]
doc-comment = "0.3"
rstest = "0.17"
rstest_reuse = "0.5"
anyhow = "1"
divan = "0.1.3"

[[bench]]
name = "load_static_db"
harness = false

[[bench]]
name = "load_hashmap_db"
harness = false
